# settra

./: .gitignore  backend-prd-invoicing-platform(1).md  backend-prd-invoicing-platform.md  frontend-prd-invoicing-platform.md  nixpacks.toml
backend/: .env.example  README.md  alembic.ini  drop_db.py  nixpacks.toml  pyproject.toml  requirements.txt  test_bitnob.py  test_busha_client.py  test_endpoints.py  test_endpoints.sh  test_invoices.py  test_invoices_crud.py  test_output.txt
backend/alembic/: env.py
backend/alembic/versions/: 03a04ff3cc27_add_payment_models.py  3562792b8571_initial_migration.py  5ecb075a4179_make_payment_target_nullable.py  669d7fdf896f_add_receipt_model.py  89621103495f_busha_branch_models.py  de4e9b594d7e_add_receipt_model.py
backend/app/: config.py  db.py  main.py
backend/app/core/: exceptions.py  security.py
backend/app/models/: __init__.py  invoice.py  overpayment_credit.py  payment.py  payment_target.py  receipt.py  user.py  webhook_event.py
backend/app/routers/: auth.py  invoices.py  overpayment_credits.py  public.py  webhooks.py
backend/app/schemas/: auth.py  invoice.py  overpayment.py  public.py
backend/app/services/: bitnob_client.py  busha_client.py  invoice_service.py  receipt_service.py  reconciliation_service.py  s3_service.py
backend/app/templates/: receipt.html
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_reconciliation.py  test_webhook_receiver.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CountdownRing.tsx  (+4 more)
(+31 files in other folders)
